UPDATE : BUG FIXED, OVERFLOW : UNRESPONSIVE CARDS

--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ header
     margin-top: 20px;
     margin-bottom: 30px;
     font-family: var(--fontPoppins);
-    transform: translateX(-115%);
+    transform: translateX(-208%);
 }
 .missionTextConatiner p
 {
@@ -327,20 +327,12 @@ header
 /* metrics */
 .metrics-container
 {
-    gap: 0.3%;
     margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 10px;
     padding: 0px 10px 0px 10px;
     width: 100%;
-}
-.metricOne
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
 }
 .metric
 {
@@ -351,7 +343,7 @@ header
     align-items: center;
     gap: 2%;
     padding: 40px 21px;
-    width: 50%;
+    width: 100%;
     border-radius: 10px;
     border: 1px solid #D3853F;
     transform: translateY(-170px);
@@ -382,20 +374,19 @@ header
 /* mission cards */
 .mission-cards
 {
-    display: flex;
-        gap: 5px;
-        justify-content: center;
-        align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
         width: 98vw;
+        gap: 10px;
         padding: 10px 0px;
-        transform: translateX(105%);
-        display: none;
+        /* transform: translateX(105%);
+        display: none; */
 }
 .mission-card
 {
     background: var(--pageBgColor);
-    width: 50%;
-    height: 15rem;
+    width: 100%;
+    height: 12rem;
     padding: 20px 15px;
     border-radius: 10px;
     color: var(--lightTextColor);
@@ -530,18 +521,19 @@ header
 }
 .teamCards
 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 1%;
     width: 98%;
+    /* justify-self: center;
+    align-self: center; */
     height: 70%;
 }
 .teamCard
 {
     border-radius: 10px;
-    width: 25%;
-    height: 330px;
+    width: 100%;
+    height: 400px;
     background: var(--normalPageBg);
     padding: 5px;
     padding-bottom: 3%;
@@ -685,8 +677,6 @@ header
 }
 .gallery
 {
-    display: none;
-    height: 100vh;
     background: var(--heroBG);
 }
 .gallery h1
@@ -696,22 +686,24 @@ header
     font-size: 80px;
     color: var(--normalTextColor);
 }
-.mySwiper
+.gallery p
 {
-    background: red;
-    height: 78vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.swiper-container {
-    width: 98%;
-    height: 100%;
+    text-align: center;
+    font-family: var(--fontPoppins);
+    font-size: 15px;
+    color: var(--normalTextColor);
+    text-transform: capitalize;
+}  
+.swiper {
+    width: 100%;
+    height: 90vh;
+    padding: 10px;
   }
 
   .swiper-slide {
     text-align: center;
     font-size: 18px;
+    background: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -719,41 +711,12 @@ header
 
   .swiper-slide img {
     display: block;
-    width: 98%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
   }
-
-  .autoplay-progress {
-    position: absolute;
-    right: 16px;
-    bottom: 16px;
-    z-index: 10;
-    width: 48px;
-    height: 48px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    color: var(--swiper-theme-color);
-  }
-
-  .autoplay-progress svg {
-    --progress: 0;
-    position: absolute;
-    left: 0;
-    top: 0px;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-    stroke-width: 4px;
-    stroke: var(--swiper-theme-color);
-    fill: none;
-    stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
-    stroke-dasharray: 125.6;
-    transform: rotate(-90deg);
-  }
+  /* projects */
 
   .projects
 {
@@ -844,11 +807,12 @@ header
     background: var(--lightTextColor);
 }
 .contactUs-content
-{
+{   
     display: flex;
-    justify-content: space-between;
-    align-items: start;
-    /* gap: 40px; */
+    justify-content: space-around;
+    /* display: grid;
+    grid-template-columns: repeat(3,1fr); */
+    gap: 20px;
     height: 70vh;
 }
 .contactUsContainer
